# tg_bot

./: conversion_rate_bot.sqlite3  manage.py  pyproject.toml  settings.py
apps/bot/: admin.py  apps.py  main_bot.py  models.py  requirements.txt
apps/bot/management/management/: apps.py
apps/bot/management/management/commands/: run_bot.py
apps/bot/migrations/: 0001_initial.py  0002_rename_data_add_work_stats_time_of_addition.py  0003_work_stats_user_pk.py  0004_alter_work_stats_user_pk.py
services/database/: bot_user_uoc.py  create_and_add_ticket.py
