[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ilya Kuprin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.2"
django-grappelli = "4.0.1"
environs = "11.0.0"
gunicorn = "23.0.0"
pyTelegramBotAPI = "4.23.0"
aiohttp = "3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
